fixed resposive on mobile dev

--- a/style.css
+++ b/style.css
@@ -34,6 +34,11 @@ body {
 
 
   }
+  .box:hover {
+    color: #010165;
+    background: #00ffff;
+    box-shadow: 0 0 22px 2px #00ffff
+  }
   #door {
     font-family: 'Work Sans';
     cursor: pointer;
@@ -45,6 +50,6 @@ body {
 
   @media (min-width:400px) {
     .door-frame {
-      height: 100%
+      height: 350px
     }
   }
